fixed movie-card.component.css, slider components and style.css, animations and overflows

--- a/src/app/shared/components/movie-card/movie-card.component.css
+++ b/src/app/shared/components/movie-card/movie-card.component.css
@@ -1,17 +1,24 @@
-.movie-card:hover.movie-des{
-  transform: translateY(-100%);
+/*.movie-card:hover.movie-des{*/
+/*  transform: translateY(-100%);*/
+/*  transition: all .3s;*/
+/*}*/
+.movie-card {
+  position: relative;
+  transform-origin: center;
   transition: all .3s;
+  z-index: 0;
 }
-.movie-card:hover .movie-img-main{
-  transform-origin:bottom center;
+
+/*.movie-img-main*/
+.movie-card:hover  {
   transform: scale(1.3);
-  transition: all .3s;
-}
-.movie-card:hover .movie-img-main::after{
-  opacity: 1;
   z-index: 99;
-  top: -49%;
 }
+/*.movie-card:hover .movie-img-main::after{*/
+/*  opacity: 1;*/
+/*  z-index: 99;*/
+/*  top: -49%;*/
+/*}*/
 .movie-img-main{
   transition: all .3s;
   position: relative;
