--- a/src/app/shared/components/slider/slider.component.css
+++ b/src/app/shared/components/slider/slider.component.css
@@ -9,8 +9,8 @@
   gap: 6px;
 }
 .swiper{
-  margin-bottom: 70px;
-  padding-top: 24px;
+  padding: 80px 0;
+  margin: -56px 0;
 }
 
 @media (max-width: 495px) {
